--- a/data_wrapping Jofre.ipynb
+++ b/data_wrapping Jofre.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1013,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "columnas_array=[\"Generos\",\"Idioma_original\",\"Creador\",\"Idiomas\",\"Canales\",\"Idiomas_hablados\",\"Companias_Produccion\",\"Paises_Produccion\"]\n",
+    "columnas_array=[\"Generos\",\"Idioma_original\",\"Creador\",\"Idiomas\",\"Canales\",\"Idiomas_hablados\",\"Companias_Produccion\",\"Paises_Produccion\",\"Pais_Origen\"]\n",
     "def contar(col):\n",
     "    if col=='sin informacion':\n",
     "        return 0\n",
@@ -1393,433 +1393,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Nombre_Serie</th>\n",
-       "      <th>#_Temporadas</th>\n",
-       "      <th>#_Episodios</th>\n",
-       "      <th>Votos_Totales</th>\n",
-       "      <th>Voto_promedio</th>\n",
-       "      <th>Categoria_Adulto</th>\n",
-       "      <th>Fecha_Inicio</th>\n",
-       "      <th>Fecha_Fin</th>\n",
-       "      <th>En_Produccion</th>\n",
-       "      <th>Nombre_Original</th>\n",
-       "      <th>...</th>\n",
-       "      <th>num_Companias_Produccion</th>\n",
-       "      <th>num_Paises_Produccion</th>\n",
-       "      <th>Mes_I</th>\n",
-       "      <th>estacion_I</th>\n",
-       "      <th>estacion_I_n</th>\n",
-       "      <th>anho_I</th>\n",
-       "      <th>Mes_F</th>\n",
-       "      <th>estacion_F</th>\n",
-       "      <th>estacion_F_n</th>\n",
-       "      <th>anho_F</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1399</th>\n",
-       "      <td>Game of Thrones</td>\n",
-       "      <td>8</td>\n",
-       "      <td>73</td>\n",
-       "      <td>21857</td>\n",
-       "      <td>8.442</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2011-04-17</td>\n",
-       "      <td>2019-05-19</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Game of Thrones</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>primavera</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>verano</td>\n",
-       "      <td>2019</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>71446</th>\n",
-       "      <td>Money Heist</td>\n",
-       "      <td>3</td>\n",
-       "      <td>41</td>\n",
-       "      <td>17836</td>\n",
-       "      <td>8.257</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2017-05-02</td>\n",
-       "      <td>2021-12-03</td>\n",
-       "      <td>False</td>\n",
-       "      <td>La Casa de Papel</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>verano</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>12</td>\n",
-       "      <td>0</td>\n",
-       "      <td>primavera</td>\n",
-       "      <td>2021</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>66732</th>\n",
-       "      <td>Stranger Things</td>\n",
-       "      <td>4</td>\n",
-       "      <td>34</td>\n",
-       "      <td>16161</td>\n",
-       "      <td>8.624</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2016-07-15</td>\n",
-       "      <td>2022-07-01</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Stranger Things</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
-       "      <td>3</td>\n",
-       "      <td>invierno</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>7</td>\n",
-       "      <td>3</td>\n",
-       "      <td>invierno</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1402</th>\n",
-       "      <td>The Walking Dead</td>\n",
-       "      <td>11</td>\n",
-       "      <td>177</td>\n",
-       "      <td>15432</td>\n",
-       "      <td>8.121</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2010-10-31</td>\n",
-       "      <td>2022-11-20</td>\n",
-       "      <td>False</td>\n",
-       "      <td>The Walking Dead</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2</td>\n",
-       "      <td>otoño</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>11</td>\n",
-       "      <td>3</td>\n",
-       "      <td>invierno</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>63174</th>\n",
-       "      <td>Lucifer</td>\n",
-       "      <td>6</td>\n",
-       "      <td>93</td>\n",
-       "      <td>13870</td>\n",
-       "      <td>8.486</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2016-01-25</td>\n",
-       "      <td>2021-09-10</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Lucifer</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>verano</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "      <td>verano</td>\n",
-       "      <td>2021</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>240693</th>\n",
-       "      <td>Jokah &amp; Tutty</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2023-11-30</td>\n",
-       "      <td>2023-11-30</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Jokah &amp; Tutty</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>11</td>\n",
-       "      <td>3</td>\n",
-       "      <td>invierno</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>11</td>\n",
-       "      <td>3</td>\n",
-       "      <td>invierno</td>\n",
-       "      <td>2023</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>239099</th>\n",
-       "      <td>母乳酱想要喷出来</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2023-03-03</td>\n",
-       "      <td>2023-03-03</td>\n",
-       "      <td>True</td>\n",
-       "      <td>母乳酱想要喷出来</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>invierno</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>invierno</td>\n",
-       "      <td>2023</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>240696</th>\n",
-       "      <td>Picasso</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2023-11-30</td>\n",
-       "      <td>2023-11-30</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Picasso</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>11</td>\n",
-       "      <td>3</td>\n",
-       "      <td>invierno</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>11</td>\n",
-       "      <td>3</td>\n",
-       "      <td>invierno</td>\n",
-       "      <td>2023</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>240697</th>\n",
-       "      <td>女子大生危険なアルバイト</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1990-02-10</td>\n",
-       "      <td>1990-02-10</td>\n",
-       "      <td>True</td>\n",
-       "      <td>女子大生危険なアルバイト</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>otoño</td>\n",
-       "      <td>1990</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>otoño</td>\n",
-       "      <td>1990</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>237566</th>\n",
-       "      <td>Welcome to My World</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2016-01-01</td>\n",
-       "      <td>2016-01-29</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Welcome to My World</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>verano</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>verano</td>\n",
-       "      <td>2016</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>135806 rows × 31 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               Nombre_Serie  #_Temporadas  #_Episodios  Votos_Totales  \\\n",
-       "id                                                                      \n",
-       "1399        Game of Thrones             8           73          21857   \n",
-       "71446           Money Heist             3           41          17836   \n",
-       "66732       Stranger Things             4           34          16161   \n",
-       "1402       The Walking Dead            11          177          15432   \n",
-       "63174               Lucifer             6           93          13870   \n",
-       "...                     ...           ...          ...            ...   \n",
-       "240693        Jokah & Tutty             1            8              0   \n",
-       "239099             母乳酱想要喷出来             1            1              0   \n",
-       "240696              Picasso             1            1              0   \n",
-       "240697         女子大生危険なアルバイト             1            1              0   \n",
-       "237566  Welcome to My World             1            5              0   \n",
-       "\n",
-       "        Voto_promedio  Categoria_Adulto Fecha_Inicio  Fecha_Fin  \\\n",
-       "id                                                                \n",
-       "1399            8.442             False   2011-04-17 2019-05-19   \n",
-       "71446           8.257             False   2017-05-02 2021-12-03   \n",
-       "66732           8.624             False   2016-07-15 2022-07-01   \n",
-       "1402            8.121             False   2010-10-31 2022-11-20   \n",
-       "63174           8.486             False   2016-01-25 2021-09-10   \n",
-       "...               ...               ...          ...        ...   \n",
-       "240693          0.000             False   2023-11-30 2023-11-30   \n",
-       "239099          0.000             False   2023-03-03 2023-03-03   \n",
-       "240696          0.000             False   2023-11-30 2023-11-30   \n",
-       "240697          0.000             False   1990-02-10 1990-02-10   \n",
-       "237566          0.000             False   2016-01-01 2016-01-29   \n",
-       "\n",
-       "        En_Produccion      Nombre_Original  ...  num_Companias_Produccion  \\\n",
-       "id                                          ...                             \n",
-       "1399            False      Game of Thrones  ...                         4   \n",
-       "71446           False     La Casa de Papel  ...                         1   \n",
-       "66732            True      Stranger Things  ...                         2   \n",
-       "1402            False     The Walking Dead  ...                         6   \n",
-       "63174           False              Lucifer  ...                         4   \n",
-       "...               ...                  ...  ...                       ...   \n",
-       "240693           True        Jokah & Tutty  ...                         2   \n",
-       "239099           True             母乳酱想要喷出来  ...                         0   \n",
-       "240696           True              Picasso  ...                         0   \n",
-       "240697           True         女子大生危険なアルバイト  ...                         0   \n",
-       "237566           True  Welcome to My World  ...                         1   \n",
-       "\n",
-       "       num_Paises_Produccion Mes_I estacion_I  estacion_I_n  anho_I  Mes_F  \\\n",
-       "id                                                                           \n",
-       "1399                       2     4          0     primavera    2011      5   \n",
-       "71446                      1     5          1        verano    2017     12   \n",
-       "66732                      1     7          3      invierno    2016      7   \n",
-       "1402                       1    10          2         otoño    2010     11   \n",
-       "63174                      1     1          1        verano    2016      9   \n",
-       "...                      ...   ...        ...           ...     ...    ...   \n",
-       "240693                     0    11          3      invierno    2023     11   \n",
-       "239099                     0     3          3      invierno    2023      3   \n",
-       "240696                     1    11          3      invierno    2023     11   \n",
-       "240697                     0     2          2         otoño    1990      2   \n",
-       "237566                     1     1          1        verano    2016      1   \n",
-       "\n",
-       "        estacion_F  estacion_F_n  anho_F  \n",
-       "id                                        \n",
-       "1399             1        verano    2019  \n",
-       "71446            0     primavera    2021  \n",
-       "66732            3      invierno    2022  \n",
-       "1402             3      invierno    2022  \n",
-       "63174            1        verano    2021  \n",
-       "...            ...           ...     ...  \n",
-       "240693           3      invierno    2023  \n",
-       "239099           3      invierno    2023  \n",
-       "240696           3      invierno    2023  \n",
-       "240697           2         otoño    1990  \n",
-       "237566           1        verano    2016  \n",
-       "\n",
-       "[135806 rows x 31 columns]"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tmdb.drop(columns=columnas_array)"
+    "\n",
+    "tmdb=tmdb.drop(columns=columnas_array)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
