--- a/data_wrapping Jofre.ipynb
+++ b/data_wrapping Jofre.ipynb
@@ -1335,7 +1335,7 @@
     "    for index, row in df_aux.iterrows():\n",
     "        aux_id=row['id']\n",
     "        aux_column=row[column]\n",
-    "        list_column=aux_column.split(\",\")\n",
+    "        list_column=aux_column.split(\", \")\n",
     "        for i in list_column:\n",
     "            new_row=pd.DataFrame([{'id_show':aux_id,column:i}])\n",
     "            new_df=pd.concat([new_df,new_row],ignore_index=True)\n",
@@ -1407,7 +1407,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tmdb.to_csv(\"TMDB_procesado.csv\",index=False)"
+    "tmdb.to_csv(\"TMDB_procesado.csv\")"
    ]
   }
  ],
