--- a/data_wrapping Jofre.ipynb
+++ b/data_wrapping Jofre.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
        "(168639, 28)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
        "max      3707.008000       6032.000000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
        "Name: count, Length: 2228, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
        "Name: count, Length: 792, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +707,7 @@
        "Name: count, Length: 26081, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +833,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +884,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +940,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1062,7 +1062,6 @@
        "      <th>Fecha_Fin</th>\n",
        "      <th>En_Produccion</th>\n",
        "      <th>...</th>\n",
-       "      <th>Paises_Produccion</th>\n",
        "      <th>Duracion_episodio</th>\n",
        "      <th>num_Generos</th>\n",
        "      <th>num_Idioma_original</th>\n",
@@ -1072,6 +1071,7 @@
        "      <th>num_Idiomas_hablados</th>\n",
        "      <th>num_Companias_Produccion</th>\n",
        "      <th>num_Paises_Produccion</th>\n",
+       "      <th>num_Pais_Origen</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>id</th>\n",
@@ -1112,7 +1112,6 @@
        "      <td>2019-05-19</td>\n",
        "      <td>False</td>\n",
        "      <td>...</td>\n",
-       "      <td>United Kingdom, United States of America</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
@@ -1122,6 +1121,7 @@
        "      <td>1</td>\n",
        "      <td>4</td>\n",
        "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>71446</th>\n",
@@ -1136,13 +1136,13 @@
        "      <td>2021-12-03</td>\n",
        "      <td>False</td>\n",
        "      <td>...</td>\n",
-       "      <td>Spain</td>\n",
        "      <td>70</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -1160,7 +1160,6 @@
        "      <td>2022-07-01</td>\n",
        "      <td>True</td>\n",
        "      <td>...</td>\n",
-       "      <td>United States of America</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
@@ -1169,6 +1168,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1184,7 +1184,6 @@
        "      <td>2022-11-20</td>\n",
        "      <td>False</td>\n",
        "      <td>...</td>\n",
-       "      <td>United States of America</td>\n",
        "      <td>42</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
@@ -1193,6 +1192,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>6</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1208,7 +1208,6 @@
        "      <td>2021-09-10</td>\n",
        "      <td>False</td>\n",
        "      <td>...</td>\n",
-       "      <td>United States of America</td>\n",
        "      <td>45</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
@@ -1218,10 +1217,11 @@
        "      <td>1</td>\n",
        "      <td>4</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 31 columns</p>\n",
+       "<p>5 rows × 32 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1241,42 +1241,42 @@
        "1402           15432          8.121             False   2010-10-31   \n",
        "63174          13870          8.486             False   2016-01-25   \n",
        "\n",
-       "        Fecha_Fin  En_Produccion  ...  \\\n",
-       "id                                ...   \n",
-       "1399   2019-05-19          False  ...   \n",
-       "71446  2021-12-03          False  ...   \n",
-       "66732  2022-07-01           True  ...   \n",
-       "1402   2022-11-20          False  ...   \n",
-       "63174  2021-09-10          False  ...   \n",
+       "        Fecha_Fin  En_Produccion  ... Duracion_episodio  num_Generos  \\\n",
+       "id                                ...                                  \n",
+       "1399   2019-05-19          False  ...                 0            3   \n",
+       "71446  2021-12-03          False  ...                70            2   \n",
+       "66732  2022-07-01           True  ...                 0            3   \n",
+       "1402   2022-11-20          False  ...                42            3   \n",
+       "63174  2021-09-10          False  ...                45            2   \n",
        "\n",
-       "                              Paises_Produccion  Duracion_episodio  \\\n",
-       "id                                                                   \n",
-       "1399   United Kingdom, United States of America                  0   \n",
-       "71446                                     Spain                 70   \n",
-       "66732                  United States of America                  0   \n",
-       "1402                   United States of America                 42   \n",
-       "63174                  United States of America                 45   \n",
+       "      num_Idioma_original num_Creador num_Idiomas num_Canales  \\\n",
+       "id                                                              \n",
+       "1399                    1           2           1           1   \n",
+       "71446                   1           1           1           2   \n",
+       "66732                   1           2           1           1   \n",
+       "1402                    1           1           1           1   \n",
+       "63174                   1           1           1           2   \n",
        "\n",
-       "      num_Generos num_Idioma_original num_Creador num_Idiomas num_Canales  \\\n",
+       "      num_Idiomas_hablados num_Companias_Produccion num_Paises_Produccion  \\\n",
        "id                                                                          \n",
-       "1399            3                   1           2           1           1   \n",
-       "71446           2                   1           1           1           2   \n",
-       "66732           3                   1           2           1           1   \n",
-       "1402            3                   1           1           1           1   \n",
-       "63174           2                   1           1           1           2   \n",
+       "1399                     1                        4                     2   \n",
+       "71446                    1                        1                     1   \n",
+       "66732                    1                        2                     1   \n",
+       "1402                     1                        6                     1   \n",
+       "63174                    1                        4                     1   \n",
        "\n",
-       "      num_Idiomas_hablados num_Companias_Produccion num_Paises_Produccion  \n",
-       "id                                                                         \n",
-       "1399                     1                        4                     2  \n",
-       "71446                    1                        1                     1  \n",
-       "66732                    1                        2                     1  \n",
-       "1402                     1                        6                     1  \n",
-       "63174                    1                        4                     1  \n",
+       "      num_Pais_Origen  \n",
+       "id                     \n",
+       "1399                1  \n",
+       "71446               1  \n",
+       "66732               1  \n",
+       "1402                1  \n",
+       "63174               1  \n",
        "\n",
-       "[5 rows x 31 columns]"
+       "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1364,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1403,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
