--- a/popularidad de series Jofre.ipynb
+++ b/popularidad de series Jofre.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        "(168639, 29)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
        "1190189"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
        "(135806, 24)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,20 +800,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\adclean\\AppData\\Local\\Temp\\ipykernel_23856\\2659127758.py:10: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\Pedro\\AppData\\Local\\Temp\\ipykernel_27088\\2659127758.py:10: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax1.set_xticklabels(ax1.get_xticklabels(), rotation=40, ha=\"right\")\n",
-      "C:\\Users\\adclean\\AppData\\Local\\Temp\\ipykernel_23856\\2659127758.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\Pedro\\AppData\\Local\\Temp\\ipykernel_27088\\2659127758.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax2.set_xticklabels(ax2.get_xticklabels(), rotation=40, ha=\"right\")\n",
-      "C:\\Users\\adclean\\AppData\\Local\\Temp\\ipykernel_23856\\2659127758.py:12: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\Pedro\\AppData\\Local\\Temp\\ipykernel_27088\\2659127758.py:12: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax3.set_xticklabels(ax3.get_xticklabels(), rotation=40, ha=\"right\")\n",
-      "C:\\Users\\adclean\\AppData\\Local\\Temp\\ipykernel_23856\\2659127758.py:13: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\Pedro\\AppData\\Local\\Temp\\ipykernel_27088\\2659127758.py:13: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax4.set_xticklabels(ax4.get_xticklabels(), rotation=40, ha=\"right\")\n"
      ]
     },
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +885,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1776,7 +1776,7 @@
        "[27 rows x 27 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1788,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1799,7 +1799,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1817,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1826,7 +1826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1836,7 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1845,7 +1845,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1877,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1944,7 +1944,7 @@
        "4   1402.0  United States of America"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1958,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1989,7 +1989,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2012,7 +2012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2021,7 +2021,7 @@
        "Text(0.5, 1.0, 'Votos Totales')"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2059,7 +2059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2095,7 +2095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2138,7 +2138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2193,7 +2193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2202,7 +2202,7 @@
        "<Axes: xlabel='count', ylabel='Generos'>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2228,7 +2228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2279,7 +2279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2288,7 +2288,7 @@
        "Text(0.5, 1.0, 'Finalizados')"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2316,7 +2316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2325,7 +2325,7 @@
        "Text(0.5, 1.0, 'Estacion de año Estreno V/S Finalizado')"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2359,7 +2359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2385,7 +2385,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2403,7 +2403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2424,7 +2424,7 @@
        "Name: count, Length: 141, dtype: int64"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2445,7 +2445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2465,7 +2465,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2476,7 +2476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2485,7 +2485,7 @@
        "Text(0.5, 1.0, 'top 10 idiomas ')"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2520,7 +2520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2529,7 +2529,7 @@
        "RangeIndex(start=0, stop=135806, step=1)"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2592,7 +2592,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
