agregado regresion lineal

--- a/data_wrapping Jofre.ipynb
+++ b/data_wrapping Jofre.ipynb
@@ -745,8 +745,8 @@
    "source": [
     "nombres_columnas= {\n",
     "'name':\"Nombre_Serie\",\n",
-    "'number_of_seasons':\"#_Temporadas\",\n",
-    "'number_of_episodes':\"#_Episodios\",\n",
+    "'number_of_seasons':\"num_Temporadas\",\n",
+    "'number_of_episodes':\"num_Episodios\",\n",
     "'original_language':\"Idioma_original\",\n",
     "'vote_count':\"Votos_Totales\",\n",
     "'vote_average':\"Voto_promedio\",\n",
@@ -808,8 +808,8 @@
      "data": {
       "text/plain": [
        "Nombre_Serie                 5\n",
-       "#_Temporadas                 0\n",
-       "#_Episodios                  0\n",
+       "num_Temporadas               0\n",
+       "num_Episodios                0\n",
        "Idioma_original              0\n",
        "Votos_Totales                0\n",
        "Voto_promedio                0\n",
@@ -859,8 +859,8 @@
      "data": {
       "text/plain": [
        "Nombre_Serie                 3\n",
-       "#_Temporadas                 0\n",
-       "#_Episodios                  0\n",
+       "num_Temporadas               0\n",
+       "num_Episodios                0\n",
        "Idioma_original              0\n",
        "Votos_Totales                0\n",
        "Voto_promedio                0\n",
@@ -915,8 +915,8 @@
      "data": {
       "text/plain": [
        "Nombre_Serie            3\n",
-       "#_Temporadas            0\n",
-       "#_Episodios             0\n",
+       "num_Temporadas          0\n",
+       "num_Episodios           0\n",
        "Idioma_original         0\n",
        "Votos_Totales           0\n",
        "Voto_promedio           0\n",
@@ -1052,8 +1052,8 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Nombre_Serie</th>\n",
-       "      <th>#_Temporadas</th>\n",
-       "      <th>#_Episodios</th>\n",
+       "      <th>num_Temporadas</th>\n",
+       "      <th>num_Episodios</th>\n",
        "      <th>Idioma_original</th>\n",
        "      <th>Votos_Totales</th>\n",
        "      <th>Voto_promedio</th>\n",
@@ -1225,13 +1225,13 @@
        "</div>"
       ],
       "text/plain": [
-       "           Nombre_Serie  #_Temporadas  #_Episodios Idioma_original  \\\n",
-       "id                                                                   \n",
-       "1399    Game of Thrones             8           73              en   \n",
-       "71446       Money Heist             3           41              es   \n",
-       "66732   Stranger Things             4           34              en   \n",
-       "1402   The Walking Dead            11          177              en   \n",
-       "63174           Lucifer             6           93              en   \n",
+       "           Nombre_Serie  num_Temporadas  num_Episodios Idioma_original  \\\n",
+       "id                                                                       \n",
+       "1399    Game of Thrones               8             73              en   \n",
+       "71446       Money Heist               3             41              es   \n",
+       "66732   Stranger Things               4             34              en   \n",
+       "1402   The Walking Dead              11            177              en   \n",
+       "63174           Lucifer               6             93              en   \n",
        "\n",
        "       Votos_Totales  Voto_promedio  Categoria_Adulto Fecha_Inicio  \\\n",
        "id                                                                   \n",
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1364,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1403,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
