--- a/ideas_extra.ipynb
+++ b/ideas_extra.ipynb
@@ -173,6 +173,13 @@
     }
    ],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "HACER treemap de estaciones"
+   ]
   }
  ],
  "metadata": {
