--- a/popularidad de series Jofre.ipynb
+++ b/popularidad de series Jofre.ipynb
@@ -59,15 +59,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hipotesis: \n",
-    "En primer lugar, se espera analizar cómo ha evolucionado la cantidad de programas a lo largo de los años. Se anticipa encontrar un aumento constante en la cantidad de estrenos debido al avance tecnológico y la expansión del acceso a plataformas de distribución de contenido. Además, se espera observar un cambio notable en el período de la pandemia de COVID-19, ya que este evento probablemente generó un efecto significativo en el comportamiento de las personas, afectando tanto la producción como el consumo de entretenimiento. Ademas de analizar como varia segun la estacion del año en que se estrena.\n",
-    "Por ultimo se espera encontrar cuales son las variables con mayor relacion al momento de determinar la popularidad de un programa."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "En primer lugar se carga las librerias necesarias y la base previamente descargada."
    ]
   },
@@ -2579,21 +2570,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Segunda entrega "
+    "# Aplicacion de ML"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Machine Learning"
+    "En este apartado se explicaran e implementaran diversos metodos de ML,para abordar las preguntas clave y validar las hipótesis,  se implementarán modelos que permitan identificar patrones y predecir la popularidad de los shows en función de variables relevantes como género, fecha de emisión, idioma y otras características descriptivas."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se espera obtener un modelo para predecir la popularidad de los nuevos programas, para esto se realizara una regresion lineal multiple, para esto en primer lugar se debe preparar la data, partiendo por eliminar aquellas variables que no seran necesarias, como por ejemplo el nombre del show, el id"
+    "## Seleccion de modelos \n",
+    "Se utilizaran los modelos de Regresión Lineal, Random Forest y Support Vector Machines (SVM). Para cada uno de estos se seguiran los siguientes pasos:\n",
+    "1) Eliminar variables innecesarias \n",
+    "2) Normalizar las bases\n",
+    "3) Separar la base en test y entrenamiento\n",
+    "4) entrenar los modelos "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import LeaveOneOut\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import statsmodels.formula.api as sma\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import f1_score, mean_squared_error, r2_score, mean_absolute_error,mean_absolute_percentage_error, mean_squared_log_error, accuracy_score, make_scorer\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn import svm\n",
+    "from sklearn.decomposition import PCA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Regresion Lineal"
    ]
   },
   {
@@ -2602,24 +2623,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#eliminar variables\n",
     "tmdb_regresion=tmdb.copy()\n",
     "tmdb_regresion=tmdb_regresion.drop(columns=['id','Nombre_Serie','Nombre_Original','Tipo_Show','Status','Pais_Origen','estacion_I_n','estacion_F_n','Fecha_Inicio','Fecha_Fin'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "En segundo lugar es necesario normalizar las bases"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -2628,6 +2634,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#normalizar bases\n",
+    "\n",
     "numeric_features =[\"num_Temporadas\",\"num_Episodios\",\"Votos_Totales\",\"Voto_promedio\",\"Popularidad\",\"Duracion_episodio\",\"Mes_F\",'Mes_I',\"scripted\",\"anho_I\",\"anho_F\",\"num_Generos\",\"num_Idiomas\"]\n",
     "X = tmdb_regresion[numeric_features]\n",
     "y = tmdb_regresion['Popularidad']\n",
@@ -2643,10 +2651,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "import statsmodels.formula.api as sma\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import f1_score, mean_squared_error, r2_score, mean_absolute_error,mean_absolute_percentage_error, mean_squared_log_error, accuracy_score\n",
+    "#separar bases\n",
     "train_set, test_set = train_test_split(tmdb_regresion,test_size=0.3, random_state=1)\n",
     "\n"
    ]
@@ -3190,6 +3195,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
@@ -3268,7 +3278,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import statsmodels.formula.api as sma\n",
+    "\n",
     "tmdb_train= pd.concat([X_train,y_train],axis=1)\n"
    ]
   },
@@ -3362,15 +3372,6 @@
    "metadata": {},
    "source": [
     "## Random Forest"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.ensemble import RandomForestRegressor"
    ]
   },
   {
@@ -3936,15 +3937,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn import svm"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 63,
    "metadata": {},
    "outputs": [],
@@ -4029,7 +4021,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.decomposition import PCA\n",
+    "\n",
     "pca = PCA(n_components=4)"
    ]
   },
@@ -4650,6 +4642,72 @@
    "metadata": {},
    "source": [
     "Se puede observar que el R2 bajo al usar el PCA tanto para la regresion lineal como el random forest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Validacion \n",
+    "En este apartado se utilizaran tecnicas de validacion para mejorar la calidad del modelo \n",
+    "Leave One Out Cross-Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "cv = LeaveOneOut()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# linear regresion\n",
+    "tmdb_regresion\n",
+    "X_regr=tmdb_regresion.drop('Popularidad',axis=1)\n",
+    "y_regr=tmdb_regresion['Popularidad'].copy()\n",
+    "# random forest\n",
+    "tmdb_forest\n",
+    "X_forest=tmdb_forest.drop('Popularidad',axis=1)\n",
+    "y_forest=tmdb_forest['Popularidad'].copy()\n",
+    "#svn\n",
+    "tmdb_svn\n",
+    "X_svn=tmdb_svn.drop('Popularidad',axis=1)\n",
+    "y_svn=tmdb_svn['Popularidad'].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MAE = make_scorer(mean_absolute_error)\n",
+    "scores_regresion = cross_val_score(model, X_regr, y_regr, scoring=MAE, cv=cv, error_score='raise',verbose=1)\n",
+    "scores_forest = cross_val_score(model_f, X_forest, y_forest, scoring=MAE, cv=cv, error_score='raise',verbose=1)\n",
+    "scores_svn = cross_val_score(model_svn, X_svn, y_svn, scoring=MAE, cv=cv, error_score='raise',verbose=1)\n"
    ]
   }
  ],
